<resources>
    <string name="app_name">MadLevel1Task1</string>
    <string name="question">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="button_lower">Lower</string>
    <string name="button_equals">Equals</string>
    <string name="button_higher">Higher</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>